# blabber

./: .gitignore  LICENSE  README.md  create_database.sh
.github/workflows/: blabber.yaml
blabber-api/: Cargo.toml
blabber-api/migrations/: 1_schema.sql  2_users.sql
blabber-api/src/: config.rs  error.rs  main.rs  passwords.rs
blabber-api/src/database/: mod.rs
blabber-api/src/models/: mod.rs  post_api.rs  posts.rs  user_api.rs  users.rs
blabber-api/src/util/: error.rs  mod.rs  passwords.rs
posts-api/: go.mod  go.sum  main.go
posts-api/middleware/: logging.go
posts-api/posts/: database.go  server.go
posts-api/posts/models/: api.go  post.go
posts-api/uidgen/: uidgen.go
scripts/: blabber.sql  blabber_posts.sql  blabber_users.sql  create_database.sh
users-api/: Cargo.toml  go.mod  go.sum  main.go
users-api/api/: database.go  server.go
users-api/envvars/: env.go
users-api/middleware/: logging.go
users-api/migrations/: 3_posts.sql
users-api/models/: api.go  database.go
users-api/src/: config.rs  main.rs
users-api/src/database/: models.rs
users-api/uidgen/: uidgen.go
users-api/users/: database.go  passwords.go  server.go
users-api/users/models/: api.go  following.go  user.go
users-api/utils/: env.go  env_test.go  passwords.go  passwords_test.go  tokens.go  uidgen.go
