[package]
name = "users_api"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Joshua Morrison <joshuamorrison941@gmail.com>"
]

[dependencies]
# Core dependencies: REST framework, runtimes, database connections
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
sqlx = {version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"]}
serde ={ version = "1", features = ["derive"] }

# Logging support
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# .env file support
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# Argon2 for password hashing and validation
argon2 = "0.5"

# Time values via chrono
chrono = { version = "0.4", features = ["serde"] }

# UUID support
uuid ={ version = "1", features = ["v4", "v7", "js", "macro-diagnostics", "serde"] }
